--- a/style.css
+++ b/style.css
@@ -1,18 +1,53 @@
-header{
-    background-color:gold
-}
+/* header{
+    background-color:gold;
+} */
 body{
-    background-color: blanchedalmond
+    background-color: blanchedalmond;
+    background-image: url(image/background.jpg);
+    background-position: center;
+    background-size: cover;
+    background-attachment:fixed;
 }
 footer{
-    background-color: gold
+    background-color: rgba(255, 255, 255, 0.1); /* 半透明白色背景 */
+    backdrop-filter: blur(3px); /* 背景模糊效果 */
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+
 }
 
 h1 {
+    /* border: 10px solid rgb(235, 223, 146);
+    border-radius: 20px; */
+    text-shadow: 2px 1px 3px red, -2px -1px 3px blue;
     font-family: Papyrus, fantasy;
     font-size: 24px;
     font-style: normal;
     font-variant: normal;
     font-weight: 700;
     line-height: 26.4px;
+}
+
+#box1{
+    border: 3px solid;
+    display: flow-root;
+    width: auto;
+    height: auto;
+    background-color: blanchedalmond;
+    margin: 2px;
+}
+
+#img1{
+    float: left;
+    margin-right:10px;
+    margin-left:10px;
+    margin-bottom:10px;
+}
+
+a:link{
+    color:black;
+}
+a:visited{
+    color:black;
 }
