--- a/style.css
+++ b/style.css
@@ -1,20 +1,30 @@
 /* header{
     background-color:gold;
 } */
-body{
+body {
     background-color: blanchedalmond;
     background-image: url(image/background.jpg);
     background-position: center;
     background-size: cover;
-    background-attachment:fixed;
+    background-attachment: fixed;
+    margin: 0;
+    padding: 0;
 }
-footer{
-    background-color: rgba(255, 255, 255, 0.1); /* 半透明白色背景 */
-    backdrop-filter: blur(3px); /* 背景模糊效果 */
+
+header {
+    background-color: transparent;
+    text-align: center;
+}
+
+footer {
+    background-color: rgba(255, 255, 255, 0.1);
+    /* 半透明白色背景 */
+    backdrop-filter: blur(3px);
+    /* 背景模糊效果 */
     position: fixed;
     bottom: 0;
     width: 100%;
-
+    text-align: left;
 }
 
 h1 {
@@ -29,7 +39,7 @@ h1 {
     line-height: 26.4px;
 }
 
-#box1{
+#box1 {
     border: 3px solid;
     display: flow-root;
     width: auto;
@@ -38,92 +48,141 @@ h1 {
     margin: 2px;
 }
 
-#img1{
+#img1 {
     float: left;
-    margin-right:10px;
-    margin-left:10px;
-    margin-bottom:10px;
+    margin-right: 10px;
+    margin-left: 10px;
+    margin-bottom: 10px;
 }
 
-a:link{
-    color:black;
-}
-a:visited{
-    color:black;
-}
-a:hover{
-    color:white;
-}
-a:active{
-    color:blueviolet;
-    font-size:1.1em
-}
-p::selection{
-    color:darkblue;
-    background-color:gold;
+a:link {
+    color: black;
 }
 
-.pagination{
-    bottom: 0;
+a:visited {
+    color: black;
+}
+
+a:hover {
+    color: white;
+}
+
+a:active {
+    color: blueviolet;
+    font-size: 1.1em
+}
+
+p::selection {
+    color: darkblue;
+    background-color: gold;
+}
+
+.pagination {
+    bottom: 50px;
     left: 50%;
     transform: translateX(-50%);
-    position:fixed;
+    position: fixed;
     text-align: center;
-    width: 100%; /
+    width: 100%;
+    margin-top: 20px;
 }
-.pagination a{
+
+.pagination a {
     background-color: grey;
     color: balck;
     text-decoration: none;
     padding: 8px 15px;
-    display:inline-block;
+    display: inline-block;
 }
-.pagination a.active{
+
+.pagination a.active {
     background-color: green;
     font-weight: bold;
     border-radius: 5px;
 }
-.pagination a:hover:not(.active){
-    background-color:aquamarine;
+
+.pagination a:hover:not(.active) {
+    background-color: aquamarine;
     border-radius: 5px;
 }
-.dropdown{
-    right:0;
-    position:fixed;
-    text-align:center;
-    margin:10px
-    
+
+.dropdown {
+    right: 0;
+    position: fixed;
+    text-align: center;
+    margin: 10px
 }
-.dropdown button{
+
+.dropdown button {
     background-color: brown;
     color: white;
     padding: 10px 15px;
     cursor: pointer;
-
 }
-.dropdown a{
+
+.dropdown a {
     display: block;
     color: black;
     text-decoration: none;
     padding: 10px 15px;
-    border:2px solid;
+    border: 2px solid;
 }
-.dropdown .content{
+
+.dropdown .content {
     display: none;
-    right:0;
+    right: 0;
     position: fixed;
-    background-color:white;
+    background-color: white;
     min-width: 100px;
     box-shadow: 2px 2px 5px black;
     border: 2px solid;
 }
 
-.dropdown:hover .content{
+.dropdown:hover .content {
     display: block;
 }
-.dropdown .content a:hover{
+
+.dropdown .content a:hover {
     background-color: brown;
 }
-.dropdown:hover button{
+
+.dropdown:hover button {
     background-color: grey;
+}
+
+.navbar {
+
+    margin-top: 20px;
+    left: 0;
+}
+
+.navbar ul {
+    list-style-type: none;
+    background-color: rgba(0, 0, 0, 0.3);
+    border: 1px solid black;
+    padding: 0px;
+    margin: 0px;
+    overflow: hidden;
+    justify-content: center;
+}
+
+.navbar a {
+    color: white;
+    text-decoration: none;
+    padding: 15px;
+    display: block;
+    text-align: center;
+}
+
+.navbar a:hover {
+
+    background-color: lightgrey;
+}
+
+.navbar li {
+    float: left;
+}
+
+.login-box {
+    position: flex
 }
